@@ -1,3 +1,8 @@
+Thu Sep 28 03:34:52 2000  George Lebl <jirka@5z.com>
+
+	* gnome-ditem.c, gnome-moz-remote2.c, gnome-util.c, gnomelib-init2.c:
+	  use g_getenv instead of getenv
+
 Sun Sep 24 15:32:20 2000  George Lebl <jirka@5z.com>
 
 	* gnome-exec.[ch]:  Improve some docs, and add function to
